# Solana_ws

./: .Resources  .gitmodules
personal-project/: package.json
personal-project/src/: index.ts
personal-rust-project/: Cargo.toml
personal-rust-project/src/: main.rs
